# python-project-83

./: .env  .env.template  .gitignore  Makefile  README.md  database.sql  docker-compose.yml  psycopg2-2.9.9-cp310-cp310-linux_x86_64.whl  pyproject.toml  setup.cfg
page_analyzer/: __init__.py  app.py  db.py  page_parser.py  url_utilities.py
page_analyzer/templates/: index.html  page404.html  url_detail.html  urls.html
page_analyzer/templates/layouts/: base.html
